# Aria

./: .gitignore  Cargo.toml  README.md  flake.nix  mingw-generic.cmake  shell.nix
.cursor/rules/: rust.mdc
.github/workflows/: build.yml
crates/aria/: Cargo.toml  build.rs
crates/aria-cli/: Cargo.toml
crates/aria-cli/src/: main.rs
crates/aria-core/: Cargo.toml
crates/aria-core/src/: core.rs  driver.rs  error.rs  lib.rs  overlay.rs  sound.rs
crates/aria-gui/: Cargo.toml
crates/aria-gui/src/: lib.rs  main.rs
crates/aria-tts/: Cargo.toml
crates/aria-tts/src/: error.rs  tts.rs
crates/aria-utils/: Cargo.toml
crates/aria-utils/src/: config.rs  error.rs  lib.rs
crates/aria-utils/src/clean_text/: README.md  bench.rs  mod.rs  regex_cleaner_pair.rs  test.rs
crates/aria-windows/: Cargo.toml
crates/aria-windows/src/: driver.rs  graphics.rs  lib.rs  sound.rs
crates/aria/src/: cli.rs  lib.rs  main.rs  overlay.rs
crates/aria_gui/: Cargo.toml
crates/aria_gui/src/: lib.rs
src/: main.rs
