[workspace]
members = [
  "crates/aria-cli",
  "crates/aria-tts",
  "crates/aria-utils",
  "crates/aria-core",
  "crates/aria",
]
resolver = "2"

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
