[package]
name = "aria-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.5"
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
simple_logger = "5.0.0"
tokio = { version = "1", features = ["full"] }

aria-core = { path = "../aria-core" }
aria-tts = { path = "../aria-tts" }
aria-utils = { path = "../aria-utils" }

[build-dependencies]
winresource = "0.1.17"
