[package]
name = "aria-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aria-tts = { path = "../aria-tts" }
aria-utils = { path = "../aria-utils" }
egui = "0.26"
uiautomation = "0.12.4"
winapi = { version = "0.3.9", features = ["winuser"] }
once_cell = "1.20.2"
rodio = "0.19.0"
log = "0.4.22"
mki = "0.2.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
regex = "1"
