[package]
name = "aria-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
  "Media",
  "Media_Core",
  "Media_Playback",
  "Media_SpeechSynthesis",
  "Storage_Streams",
] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
lazy_static = "1.5.0"
