[package]
name = "aria-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
aria-utils = { path = "../aria-utils" }
windows = { version = "0.58.0", features = [
  "Media",
  "Media_Core",
  "Media_Playback",
  "Media_SpeechSynthesis",
  "Storage_Streams",
] }
log = "0.4.22"
lazy_static = "1.5.0"
once_cell = "1.20.2"
