[package]
name = "aria-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
serde = { version = "1.0.210", features = ["derive"] }
dirs = "5.0.1"
toml = "0.8.19"
regex = "1.11.0"
quickcheck = "1.0.3"
once_cell = "1.20.2"
unicode-segmentation = "1.12.0"

[dev-dependencies]
tempfile = "3.2"
