[package]
name = "aria"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aria"
path = "src/main.rs"

[dependencies]
aria-core = { path = "../aria-core" }
egui = "0.26"
egui_overlay = "0.8.1"
tokio = { version = "1", features = ["full"] }
log = "0.4.22"
simple_logger = "4.3.3"
ctrlc = "3.4.4"
chrono = "0.4"
image = "0.24"

[build-dependencies]
winresource = "0.1.17"

[dev-dependencies]
